--- a/sliderdgi-child/style.css
+++ b/sliderdgi-child/style.css
@@ -8,6 +8,167 @@ Template:       sliderdgi
 Version:        0.1.0
 */
 
-.testomio {
-    color: #000;
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+/* NAVBAR */
+.navbarmia {
+    margin-bottom: 0;
+    padding: 10px;
+    background-color: #000;
+    border: none;
+    color: #5e5e5e;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #777;
+}
+
+a:hover {
+
+}
+
+
+/* SLIDER*/
+#containermio {
+    width:100%;
+    margin:0 auto;
+    overflow: hidden;
+    min-height: 536px;
+    position: relative;
+}
+
+#containermio a:hover {
+    color: white;
+}
+
+#containermio ul {
+    margin:0px;
+    padding:0px;
+    width:100%;
+    list-style: none;
+    height: 100%;
+    position: absolute;
+}
+
+#containermio ul li {
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+#containermio ul li img {
+    width:100%;
+    min-height: 100%;
+}
+
+#heightimg {
+    max-height:450px;
+}
+
+/* ANIMATION FADE */
+.mySlides {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* SLIDE TITLE*/
+.text {
+    margin:0;
+    padding: 20px 0 0 20px;
+    font-size:40px;
+    font-weight:600;
+    color:#f7f7f7;
+    text-align: center;
+    position: absolute;
+}
+
+
+/* ARROWS */
+.prev, .next {
+    z-index: 99;
+    cursor: pointer;
+    position: absolute;
+    display: block;
+    top: 40%;
+    width: auto;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    padding: 20px 20px 20px 20px;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+    text-decoration: none;
+}
+
+
+/* PALLINI? */
+.dotdiv {
+  bottom: 10px;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+}
+
+.dot {
+  cursor:pointer;
+  height: 6px;
+  width: 6px;
+  margin: 0 2px;
+  background-color: #eee;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* FOOTER */
+.footermio {
+    margin-bottom: 0;
+    padding: 20px;
+    background-color: #000;
+    border: none;
+    color: #5e5e5e;
+}
+
+
+@media (max-width: 767px) {
+
+    #containermio {min-height: 210px;}
+    .text {font-size: 20px;}
+    .prev, .next {top:33%;}
+    .prev:hover, .next:hover {background-color: transparent;}
 }
