--- a/sliderdgi-child/style.css
+++ b/sliderdgi-child/style.css
@@ -24,6 +24,12 @@ body {
     color: #5e5e5e;
 }
 
+.navbartogglemia {
+    background-color: #000;
+    border: none;
+    box-shadow: none;
+}
+
 a {
     color: #fff;
     text-decoration: none;
@@ -33,17 +39,13 @@ a:visited {
     color: #777;
 }
 
-a:hover {
-
-}
-
 
 /* SLIDER*/
 #containermio {
     width:100%;
     margin:0 auto;
     overflow: hidden;
-    min-height: 536px;
+    height: 536px;
     position: relative;
 }
 
@@ -62,8 +64,12 @@ a:hover {
 
 #containermio ul li {
     height: 100%;
-    overflow: hidden;
+    display: none;
     position: relative;
+}
+
+#containermio ul li:first-child {
+    display: block;
 }
 
 #containermio ul li img {
@@ -102,6 +108,7 @@ a:hover {
     color:#f7f7f7;
     text-align: center;
     position: absolute;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
